objects/ssot__Budget__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Budget_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Budget_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Budget_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Budget_ParentBudgetId_map_Budget_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget_ParentBudgetId_map_Budget_Id_N_1</label>
        <referenceTo>ssot__Budget__dlm</referenceTo>
        <relationshipLabel>Budget_ParentBudgetId_map_Budget_Id_N_1</relationshipLabel>
        <relationshipName>Budget_ParentBudgetId_map_Budget_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Budget_ProgramId_map_Program_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget_ProgramId_map_Program_Id_N_1</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>Budget_ProgramId_map_Program_Id_N_1</relationshipLabel>
        <relationshipName>Budget_ProgramId_map_Program_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <label>Submitted</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentBudgetId__c</fullName>
        <label>Parent Budget</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PeriodEndDate__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PeriodName__c</fullName>
        <label>Period Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PeriodStartDate__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBudgetAmount__c</fullName>
        <label>Total Budget Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>